upd: now initial message is used with different text for cases when search didn't match anything

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -345,6 +345,18 @@ h3, .h3, .item-title {
 .initial-message p {
   margin: 4px 0;
 }
+.initial-message .no-videos-message {
+  display: block;
+}
+.initial-message .no-matches-message {
+  display: none;
+}
+.initial-message.no-matches .no-videos-message {
+  display: none;
+}
+.initial-message.no-matches .no-matches-message {
+  display: block;
+}
 
 .header {
   position: sticky;
