--- a/extension/popup/styles/_inputs.scss
+++ b/extension/popup/styles/_inputs.scss
@@ -362,3 +362,42 @@
         }
     }
 }
+
+/* Clear history button style - prominent danger action but matches general styling */
+.clear-history-button {
+    width: 100%;
+    padding: 10px 12px;
+    border-radius: 8px;
+    font-size: var(--font-body);
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: all var(--transition-normal);
+    color: white;
+    background-color: var(--color-red);
+    box-shadow: 0 1px 0 rgba(0,0,0,0.2) inset;
+
+    &:hover:not(:disabled) {
+        background-color: var(--color-red-hover);
+    }
+
+    &:disabled {
+        cursor: auto;
+    }
+
+    &.success {
+        background-color: var(--color-green);
+        
+        &:hover:not(:disabled) {
+            background-color: var(--color-green);
+        }
+    }
+
+    &.error {
+        background-color: var(--color-red);
+        
+        &:hover:not(:disabled) {
+            background-color: var(--color-red);
+        }
+    }
+}
