--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -543,6 +543,7 @@ h3, .h3, .item-title {
 .custom-dropdown {
   position: relative;
   width: 100%;
+  max-width: 190px;
   height: 24px;
   border-radius: 6px;
   overflow: visible;
