--- a/extension/popup/styles/_dropdown.scss
+++ b/extension/popup/styles/_dropdown.scss
@@ -6,6 +6,7 @@
     @extend %interactive-base;
     position: relative;
     width: 100%;
+	max-width: 190px;
     height: 24px;
     border-radius: 6px;
     overflow: visible; // Allow tooltips to show outside
