--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -2013,6 +2013,7 @@ h3, .h3, .item-title {
       -ms-flex-align: center;
           align-items: center;
   gap: 6px;
+  word-break: break-all;
 }
 
 .status-dot {
