--- a/extension/popup/styles/_base.scss
+++ b/extension/popup/styles/_base.scss
@@ -89,5 +89,5 @@ h3, .h3, .item-title {
 // Specific overrides for app title positioning
 .app-title {
     text-align: center;
-    padding: 8px;
+    padding: 8px 8px 14px 8px;
 }
