--- a/extension/popup/styles/_dropdown.scss
+++ b/extension/popup/styles/_dropdown.scss
@@ -187,7 +187,7 @@
     left: 0;
     margin-block-start: 1px;
     border-radius: 6px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
     z-index: 4;
     max-height: 0;
     overflow-y: auto;
@@ -205,7 +205,7 @@
 
     .theme-light & {
         background: var(--bg-backdrop-light);
-        box-shadow: var(--bg-element-shadow-light);
+        border: 1px solid var(--border-primary-light);
     }
 
     // Webkit scrollbar styling
